[tool.poetry]
name = "nautobot-map"
version = "0.1.0"
description = "Nautobot plugin to add a page with a map of locations"
authors = ["Alexis Panagiotopoulos <apanagio@enomix.gr>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
